--- a/package.json
+++ b/package.json
@@ -10,8 +10,13 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^4.3.2",
     "@astrojs/check": "^0.4.1",
+    "@astrojs/react": "^3.6.2",
+    "@types/react": "^18.3.7",
+    "@types/react-dom": "^18.3.0",
+    "astro": "^4.3.2",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "typescript": "^5.3.3"
   }
 }
