--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "typescript": "^5.3.3"
   },
   "devDependencies": {
+    "@types/node": "^22.7.2",
     "prettier": "^3.3.3",
     "prettier-plugin-astro": "^0.14.1"
   }
