[FEAT] Adding test button component

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,8 +5,9 @@
     "jsxImportSource": "react",
     "paths": {
       "@/*": ["./src/*"],
-      "@components/*": ["./src/components/*"],
-      "@layouts/*": ["./src/layouts/*"]
+      "@/components/*": ["./src/components/*"],
+      "@/layouts/*": ["./src/layouts/*"],
+      "@/lib/*": ["./src/lib/*"]
     }
   },
 
