[FIX] baseURL, paths

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,11 +3,9 @@
   "compilerOptions": {
     "jsx": "react-jsx",
     "jsxImportSource": "react",
+    "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"],
-      "@/components/*": ["./src/components/*"],
-      "@/layouts/*": ["./src/layouts/*"],
-      "@/lib/*": ["./src/lib/*"]
+      "@/*": ["src/*"]
     }
   },
 
