--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@astrojs/check": "^0.4.1",
     "@astrojs/react": "^3.6.2",
     "@astrojs/tailwind": "^5.1.1",
+    "@nanostores/react": "^0.8.4",
     "@radix-ui/react-slot": "^1.1.0",
     "@types/react": "^18.3.7",
     "@types/react-dom": "^18.3.0",
@@ -21,6 +22,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.446.0",
+    "nanostores": "^0.11.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "tailwind-merge": "^2.5.2",
