--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@astrojs/check": "^0.4.1",
     "@astrojs/react": "^3.6.2",
     "@astrojs/tailwind": "^5.1.1",
+    "@nanostores/persistent": "^0.10.2",
     "@nanostores/react": "^0.8.4",
     "@radix-ui/react-slot": "^1.1.0",
     "@types/react": "^18.3.7",
