--- a/components.json
+++ b/components.json
@@ -5,7 +5,7 @@
   "tsx": true,
   "tailwind": {
     "config": "tailwind.config.mjs",
-    "css": "src/styles/global.css",
+    "css": "src/styles/global.scss",
     "baseColor": "gray",
     "cssVariables": true,
     "prefix": ""
