--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.4.1",
+    "@astrojs/netlify": "^6.3.1",
     "@astrojs/react": "^3.6.2",
-    "@astrojs/tailwind": "^5.1.1",
+    "@astrojs/tailwind": "^6.0.2",
+    "@lucide/astro": "^0.503.0",
     "@nanostores/persistent": "^0.10.2",
     "@nanostores/react": "^0.8.4",
     "@radix-ui/react-slot": "^1.1.0",
@@ -22,16 +24,19 @@
     "astro": "^4.3.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "daisyui": "^5.0.27",
+    "dayjs": "^1.11.13",
     "lucide-react": "^0.446.0",
     "nanostores": "^0.11.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "tailwind-merge": "^2.5.2",
-    "tailwindcss": "^3.4.13",
+    "tailwindcss": "^3.4.17",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.3.3"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.16",
     "@types/node": "^22.7.2",
     "prettier": "^3.3.3",
     "prettier-plugin-astro": "^0.14.1",
