fix: astro.config

--- a/package.json
+++ b/package.json
@@ -21,13 +21,17 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@types/react": "^18.3.7",
     "@types/react-dom": "^18.3.0",
-    "astro": "^4.3.2",
+    "add": "^2.0.6",
+    "astro": "^4.16.13",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "daisyui": "^5.0.27",
     "dayjs": "^1.11.13",
+    "dlx": "^0.2.1",
     "lucide-react": "^0.446.0",
     "nanostores": "^0.11.3",
+    "netlify": "^13.3.5",
+    "netlify-cli": "^20.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "tailwind-merge": "^2.5.2",
